--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,19 +1,39 @@
 /*--Секция клиенты*/
 
 .clients {
-    justify-content: center;
-    align-items: center;
-    --grid-num: 6;
     
     
   &__item {
-   
-    height: 90px;
+
+    min-height: 90px;
+    --grid-num: 2;
   }
   
-  &__item:nth-child(6n) {
-    margin-right: 0px;
+  @media screen and (min-width: 768px) {
+    --grid-num: 3;
   }
+  @media screen and (min-width: 1198.98px) {
+    --grid-num: 6;
+  }
+
+
+&:last-child {
+   margin-bottom: 0;
+   @media screen and (min-width: 1200px) {
+   margin-right: 0;
+    }
+   }
+   @media screen and (min-width: 768px) {
+     width: calc((100% - 60px) / 3);
+   }
+
+   @media screen and (min-width: 1200px) {
+     width: 170px;
+     margin-right: 30px;
+     margin-bottom: 0;
+   }
+  }  
+
   
   &__link {
     display: flex;
@@ -25,6 +45,7 @@
     border: 1px solid #afb1b8;
   
     border-radius: 4px;
+
     fill: #afb1b8;
   
     transition: border-color var(--animation), fill var(--animation);
@@ -40,4 +61,3 @@
   &__icon {
     transition: fill var(--animation);
   } 
-}
