--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,6 +24,6 @@
   @import "./layouts/clients";
   @import "./layouts/footer";
   @import "./layouts/filter";
-  @import "./layouts/product";
+  @import "./layouts/portfolio";
 
   
