--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -14,8 +14,9 @@
   &__item:nth-child(4n) {
     margin-right: 0;
   }
-  
-  &__link {
+} 
+
+.social__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,20 +28,22 @@
     
 
     transition: background-color var(--animation);
-}
+    
+    &:hover,
+    &:focus {
+      background: var(--accent-text-color);
+    }
+  }
 
-  &__icon {
+.social__icon {
    width: 20px;
    height: 20px;
    
    fill: var(--base-icon-color);
    transition: var(--animation);
   
-  }
-
-  &__link:hover,
-  &__link:focus {
-    background: var(--accent-text-color);
-    fill: var(--white-color);
-  }
-}
+   .social__link:hover &,
+   .social__link:focus & {
+     fill: var(--white-color);
+   }
+ }
