--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -11,7 +11,7 @@
     background-color: var(--background-color);
     color: var(--white-color);
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/mobile/hero-mobile-480.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/mobile/hero-mobile-480.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -24,7 +24,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/mobile/hero-mobile-480@2x.jpg);
+      url(../images/hero/mobile/hero-mobile-480@2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
@@ -33,7 +33,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/tablet/hero-tablet-768.jpg);
+      url(../images/hero/tablet/hero-tablet-768.jpg);
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -43,7 +43,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/tablet/hero-tablet768@2x-min.jpg);
+        url(../images/hero/tablet/hero-tablet768@2x-min.jpg);
     }
   }
   
@@ -56,7 +56,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/hero/desktop/hero-desktop1600.jpg);
+      url(../images/hero/desktop/hero-desktop1600.jpg);
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -66,7 +66,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero/desktop/hero-desktop1600@2x.jpg);
+        url(../images/hero/desktop/hero-desktop1600@2x.jpg);
     }
   } 
   
