--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,9 +1,16 @@
   .title {
+    text-align: center;
+    margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    margin-bottom: 10px;
     text-transform: uppercase;
     color: var(--title-text-color);
+    
+    @media screen and (min-width: 767.98px) {
+    text-align: left;
   }
+
+  
+}
+    
+  
