--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -17,6 +17,7 @@
     --accent-text-color: #2196f3;
     --base-icon-color: #afb1b8;
     --title-font: "Roboto", sans-serif;
+    --grey-color: #f5f4fa;
     --white-color: #ffffff;    
     --bg-accent-col: #188ce8;
     --footer-link-col:#acacb0;
