--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,6 +11,7 @@
 
   @media screen and (min-width: 320px) and (max-width: 767.98px) {
     padding: 10px 0;
+    justify-content: space-between;
   }
 
   @media screen and (min-width: 767.98px) {
