--- a/sass/layouts/_section.scss
+++ b/sass/layouts/_section.scss
@@ -1,25 +1,42 @@
  /* Section */
 
 .section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1199.98px) {
     padding-top: 94px;
     padding-bottom: 94px;
- 
-
-  &__title {
-    color: var(--title-text-color);
   }
-    
+
+  &--bg {
+    background-color: var(--grey-color);
+  }
+
   &--padding-bottom {
-    padding-bottom: 0;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1199.98px) {
+      padding-bottom: 0;
+    }
   }
 
   &__title {
     margin-top: 0px;
-    margin-bottom: 50px;
-  
+    margin-bottom: 30px;
+
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
+    color: var(--title-text-color);
+
+    @media screen and (min-width: 1199.98px) {
+      font-size: 36px;
+      margin-bottom: 50px;
+    }
   }
- }  
+  }  
+ 
+    
+  
